[gd_scene load_steps=3 format=3 uid="uid://blqhtiej15ies"]

[ext_resource type="Script" uid="uid://yj5473v1bw6x" path="res://scripts/shop_relic.gd" id="1_yxgno"]
[ext_resource type="FontFile" uid="uid://j3u6vwrixpc0" path="res://fonts/boldpixels/BoldPixels.otf" id="2_55baa"]

[node name="ShopRelic" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yxgno")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_55baa")
theme_override_font_sizes/font_size = 20

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_55baa")
theme_override_font_sizes/font_size = 20

[node name="PriceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_55baa")
theme_override_font_sizes/font_size = 20

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="PurchaseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
